# py-demos

./: .pdm-python  README.md  pyproject.toml
audio-file-visualizer/: main.py
pathfind-algo-visual/: main.py
top-artists/: .gitignore  main.py  my_fav_tops.csv
